--- a/about/about.html
+++ b/about/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Justice Festival</title>
+    <title>Social Justice Festival About</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <header>
         <nav>
             <a href="../index.html"><img src="../img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
@@ -27,7 +28,9 @@
     <h1>ABOUT</h1>
 
     <div id="div1" class="divs">
+
         <div id="inner-div" class="divs">
+
             <h3>About Forests</h3>
             <p>Forests are large areas covered with trees. California is home to many forests with diverse
                 trees, such as redwoods and madrone trees. Many efforts have been made in an
@@ -35,20 +38,24 @@
                 forests are being threatened by fires. California has many forest fires and forests keep
                 becoming devestated, it is important to replant these forests in order to keep them
                 restored.</p>
+
         </div>
 
         <div id="inner-img" title="an image of a forest fire that turns into a normal forest when hovered on"></div>
 
         <div id="div2">
+
             <h3>Sempervirens</h3>
             <p>Our festival is working together with an organization called Sempervirens. This organization uses support
                 and donations in order to protect coast redwoods. They improve habitats, and enhance forest resilience
                 to achieve their goal. </p>
+
         </div>
 
         <hr>
 
         <footer>
+
             <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
             <a
                 href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
