--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id="main">
+
         <header>
             <nav>
                 <a href=""><img src="img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
@@ -24,6 +25,7 @@
                 <a href="merch/merch.html">Merch</a>
             </nav>
         </header>
+
         <div class="flex" , id="div1">
             <h1>SAVE THE FORESTS </br>
                 <p id="title">a fundraising festival</p>
@@ -33,8 +35,11 @@
         <div>
             <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image" alt="image of a full green forest">
         </div>
+
     </div>
+
     <div class="flex" , id="div2">
+        
         <h2>About Us</h2>
         <p id="info">Forests are large areas covered with trees. California is home to many forests with diverse
             trees, such as redwoods and madrone trees. Many efforts have been made in an
@@ -47,7 +52,9 @@
     </div>
 
     <hr>
+    
     <footer>
+
         <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
         <a
             href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
@@ -59,9 +66,6 @@
 </body>
 
 <!--to-do
-other orginnaztio
-clean code
 change about
-clean
-
+resource
 media-->
