--- a/merch/merch.html
+++ b/merch/merch.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Justice Festival</title>
+    <title>Social Justice Festival Merch</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,9 @@
 </head>
 
 <body>
+
     <div id="main">
+
         <header>
             <nav>
                 <a href="../index.html"><img src="img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
@@ -24,13 +26,15 @@
                 <a href="../merch/merch.html">Merch</a>
             </nav>
         </header>
+
         <div id="div1">
             <h1>MERCH</h1>
         </div>
 
 
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png" alt="image of a pin with a drawing of a tree in front of the earth and the words save the forests a fundraising festival wirrten in white">
+            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png"
+                alt="image of a pin with a drawing of a tree in front of the earth and the words save the forests a fundraising festival wirrten in white">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
                 <p>Badge with festival logo and festival name</p>
@@ -39,10 +43,9 @@
             <hr>
         </div>
 
-
-
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png" alt="image of a pin with an image of a tree in front of the earth">
+            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png"
+                alt="image of a pin with an image of a tree in front of the earth">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Logo Badge - $5.00</h3>
                 <p>Badge with festival logo</p>
@@ -52,17 +55,21 @@
         </div>
 
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png" alt="image of a blue and green button with the words save the forests a fundraising festival on it">
+            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png"
+                alt="image of a blue and green button with the words save the forests a fundraising festival on it">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Title Badge - $5.00</h3>
                 <p>Badge with festival name and description</p>
                 <button>purchase</button>
             </div>
+
             <hr>
+
         </div>
     </div>
 
     <footer>
+
         <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
         <a
             href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
@@ -70,4 +77,5 @@
         <p>John King &nbsp;</p>
 
     </footer>
+
 </body>
